Add latest news section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./build/normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Arsenal:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 
     <title>TNW clone</title>
   </head>
@@ -43,12 +43,73 @@
         </article>
 
         <article>
-          <div class="cover-image" style="background-image: url(./images/article-img2.jpg)"></div>
+          <div class="cover-image" style="background-image: url(./images/article-img2.jpg)">
+            <div class="content">
+              <h3>GEAR</h3>
+              <h2>Tivoli’s beautiful $200 speaker isn’t ready for the outdoors – or anywhere, really</h2>
+              <span>by Abhimanyu Ghoshal</span>
+              <span><i class="far fa-clock"></i> 1 hour ago</span>
+              <span><i class="fas fa-share-alt"></i> 42</span> 
+            </div><!-- end of content -->
+          </div><!-- end of cover-image -->
         </article>
 
         <article>
-          <div class="cover-image" style="background-image: url(./images/article-img3.png)"></div>        
+          <div class="cover-image" style="background-image: url(./images/article-img3.png)">
+            <div class="content">
+              <h3>TECH</h3>
+              <h2>Cardano talks blockchain innovation with Mongolian government</h2>
+              <span>by David Canellis</span>
+              <span><i class="far fa-clock"></i> 2 hours ago</span>
+              <span><i class="fas fa-share-alt"></i> 11</span> 
+            </div><!-- end of content -->
+          </div><!-- end of cover-image -->        
         </article>
-    </div><!-- end of recent-articles -->
+      </section><!-- end of recent-articles -->
+
+      <section class="latest-news">
+        <h1>Latest news <i class="fas fa-greater-than"></i></h1>
+
+        <article>
+          <img src="./images/news-img1.png" />
+          <div class="content">
+            <div class="title">Devs used solar-powered radios to complete first ‘off-grid’ cryptocurrency transaction</div>
+            <span>Matthew Beedham - 17 minutes ago</span>
+          </div>
+        </article>
+
+        <article>
+          <img src="./images/news-img2.png" />
+          <div class="content">
+            <div class="title">Robotic trousers could help paraplegic people walk again</div>
+            <span>The Conversation - 3 hours ago</span>
+          </div>
+        </article>
+
+        <article>
+          <img src="./images/news-img3.jpg" />
+          <div class="content">
+            <div class="title">Hackers create 1B fake EOS to rob ‘decentralized’ cryptocurrency exchange</div>
+            <span>David Canellis - 4 hours ago</span>
+          </div>
+        </article>
+
+        <article>
+          <img src="./images/news-img4.png" />
+          <div class="content">
+            <div class="title">Designers need to keep old people in mind</div>
+            <span>Howard Williams - 4 hours ago</span>
+          </div>
+        </article>
+
+        <article>
+          <img src="./images/news-img5.jpg" />
+          <div class="content">
+            <div class="title">Learn to master the difficulties of dropshipping with this $39 bundle</div>
+            <span>TNW Deals - 5 hours ago</span>
+          </div>
+        </article>
+      </section>
+    </div><!-- end of main-container -->
   </body>
 </html>
