Add latest funding section and utilities.scss

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="main-container">
       <section class="recent-articles">
         <article>
-          <div class="cover-image" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.7)), url(./images/article-img1.jpg)">
+          <div class="cover-image" style="background-image: linear-gradient(rgba(0, 0, 0, -0.8), rgba(0, 0, 0, 0.7)), url(./images/article-img1.jpg)">
             <div class="content">
               <h3>TECH</h3>
               <h2>Cardano talks blockchain innovation with Mongolian government</h2>
@@ -68,7 +68,7 @@
       </section><!-- end of recent-articles -->
 
       <section class="latest-news">
-        <h1>Latest news <i class="fas fa-greater-than"></i></h1>
+        <h1 class="heading-decoration">Latest news <i class="fas fa-greater-than sign-decoration"></i></h1>
 
         <article>
           <img src="./images/news-img1.png" />
@@ -109,6 +109,32 @@
             <span>TNW Deals - 5 hours ago</span>
           </div>
         </article>
+      </section><!-- end of latest-news -->
+
+      <section class="latest-funding">
+        <h1 class="heading-decoration">Latest funding rounds on Index.co <i class="fas fa-greater-than sign-decoration"></i></h1>
+
+        <ul class="red">
+          <li>See more</li>
+          <li>Get updates by email</li>
+          <li>Add info</li>
+        </ul>
+
+        <div class="card">
+          <img src="https://index.tnwcdn.com/images/61cdfe7ee6056caaf8848b8b63c2716c6492f7ae.jpg" />
+          <div class="title"><h4>MortgageGym</h4></div>
+          <div class="price">
+            <span>£3.8M</span>
+            <span>VENTURE CAPITAL</span>
+          </div>
+
+          <div class="content">
+            <span><i class="fas fa-tag pr-5"></i> Robotics, +2</span>
+            <span><i class="fas fa-briefcase pr-5"></i> LSL Property Services</span>
+            <hr>
+            <h5>MortgageGym Completes £3.8M Funding Round <span class="light-grey">on FinSMEs</span></h5>
+          </div><!-- end of content -->
+        </div><!-- end of card -->
       </section>
     </div><!-- end of main-container -->
   </body>
