Add second header for min-width 1024px

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>TNW clone</title>
   </head>
   <body>
-    <header>
+    <header class="first-header">
       <div class="container">
         <img src="./images/TNW-logo-mobile.png" class="logo-img">
     
@@ -25,6 +25,50 @@
             <i class="fas fa-bars"></i>
           </div>
         </div><!-- end of nav-icons -->
+      </div><!-- end of container -->
+    </header>
+
+    <header class="second-header">
+      <div class="container">
+        <div class="navbar">
+          <ul class="left-links">
+            <a href="#"><li>News</li></a>
+            <a href="#"><li>Conference</li></a>
+            <a href="#"><li>Index</li></a>
+            <a href="#"><li>TQ</li></a>
+            <a href="#"><li>Deals</li></a>
+            <a href="#"><li>Answers</li></a>
+            <a href="#"><li>TNW X</li></a>              
+          </ul>
+
+          <ul class="right-links">
+            <a href="#"><li>About</li></a>
+            <a href="#"><li>Team</li></a>
+            <a href="#"><li>Advertise</li></a>
+            <a href="#"><li>Jobs</li></a>
+            <a href="#"><li>Contact</li></a>
+          </ul>
+        </div><!-- end of navbar -->
+        <nav>
+          <ul>
+            <a href="#"><li>latest</li></a>
+            <a href="#"><li>Hard Fork</li></a>
+            <a href="#"><li>Plugged</li></a>
+            <a href="#"><li>The next police</li></a>
+            <a href="#"><li>Iot lab</li></a>
+            <a href="#"><li>Investing 2.0</li></a>
+          </ul>
+       
+          <div class="nav-icons">
+            <ul>
+              <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="far fa-envelope"></i></a></li>
+              <li><a href="#"><i class="fas fa-ellipsis-h"></i></a></li>
+              <li><a href="#"><i class="fas fa-search fa-rotate-90"></i></a></li>
+            </ul>
+          </div><!-- end of nav-icons -->
+        </nav>
       </div><!-- end of container -->
     </header>
 
