Create mixins and make recent articles section responsive for tablet

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./build/normalize.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link href="css/materialdesignicons.min.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700,900" rel="stylesheet">
 
     <title>TNW clone</title>
   </head>
@@ -74,7 +74,7 @@
 
     <div class="main-container">
       <section class="recent-articles">
-        <article>
+        <article class="main-article">
           <div class="cover-image" style="background-image: linear-gradient(rgba(0, 0, 0, -0.8), rgba(0, 0, 0, 0.7)), url(./images/article-img1.jpg)">
             <div class="content">
               <h3>TECH</h3>
@@ -86,8 +86,8 @@
           </div><!-- end of cover-image -->
         </article>
 
-        <article>
-          <div class="cover-image" style="background-image: url(./images/article-img2.jpg)">
+        <article class="first-article">
+          <div class="cover-image" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/article-img2.jpg)">
             <div class="content">
               <h3>GEAR</h3>
               <h2>Tivoli’s beautiful $200 speaker isn’t ready for the outdoors – or anywhere, really</h2>
@@ -98,8 +98,8 @@
           </div><!-- end of cover-image -->
         </article>
 
-        <article>
-          <div class="cover-image bckg-position-t" style="background-image: url(./images/article-img3.jpg), linear-gradient(#dfe6e9, #2d3436)">
+        <article class="second-article">
+          <div class="cover-image bckg-position-t" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/article-img3.jpg)">
             <div class="content">
               <h3>GEAR</h3>
               <h2>Samsung might launch its first quad-camera phone on October 11</h2>
@@ -287,7 +287,7 @@
         <article>
           <h1 class="heading-decoration">Tech <i class="fas fa-greater-than sign-decoration"></i></h1>
 
-          <div class="cover-image bckg-position-t" style="background-image: url(./images/code-of-conduct.jpg), linear-gradient(#dfe6e9, #2d3436)">
+          <div class="cover-image bckg-position-t" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/code-of-conduct.jpg)">
             <div class="content">
               <h3>MOST POPULAR</h3>
               <h2>Chaos follows Linux dev community's new code of conduct</h2>
