Make website responsive for laptop

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
     <div class="main-container">
       <section class="recent-articles">
         <article class="main-article">
-          <div class="cover-image" style="background-image: linear-gradient(rgba(0, 0, 0, -0.8), rgba(0, 0, 0, 0.7)), url(./images/article-img1.jpg)">
+          <div class="cover-image" style="background-image: linear-gradient(rgba(0, 0, 0, -0.8), rgba(0, 0, 0, 1)), url(./images/article-img1.jpg)">
             <div class="content">
-              <h3>TECH</h3>
-              <h2>Cardano talks blockchain innovation with Mongolian government</h2>
-              <span>by David Canellis</span>
+              <h3>DISTRACT</h3>
+              <h2>Not even Scrabble can stop me telling my family about Bitcoin</h2>
+              <span>by Matthew Beedham</span>
               <span><i class="far fa-clock"></i> 2 hours ago</span>
               <span><i class="fas fa-share-alt"></i> 11</span> 
             </div><!-- end of content -->
@@ -87,7 +87,7 @@
         </article>
 
         <article class="first-article">
-          <div class="cover-image" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/article-img2.jpg)">
+          <div class="cover-image" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(0, 0, 0, 1)), url(./images/article-img2.jpg)">
             <div class="content">
               <h3>GEAR</h3>
               <h2>Tivoli’s beautiful $200 speaker isn’t ready for the outdoors – or anywhere, really</h2>
@@ -99,7 +99,7 @@
         </article>
 
         <article class="second-article">
-          <div class="cover-image bckg-position-t" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/article-img3.jpg)">
+          <div class="cover-image bckg-position-t" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(0, 0, 0, 1)), url(./images/article-img3.jpg)">
             <div class="content">
               <h3>TECH</h3>
               <h2>Animation reveals what could be Google’s new ‘Pixel Stand’</h2>
@@ -222,7 +222,7 @@
           <article>
             <h1 class="heading-decoration">Hard Fork <i class="fas fa-greater-than sign-decoration"></i></h1>
 
-            <div class="cover-image" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/article-img1.jpg)">
+            <div class="cover-image" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(0, 0, 0, 1)), url(./images/article-img1.jpg)">
               <div class="content">
                 <h3>MOST POPULAR</h3>
                 <h2>Cardano talks blockchain innovation with Mongolian government</h2>
@@ -257,7 +257,7 @@
           <article>
             <h1 class="heading-decoration">Gear <i class="fas fa-greater-than sign-decoration"></i></h1>
 
-            <div class="cover-image bckg-position-c" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/samsung.jpg)">
+            <div class="cover-image bckg-position-c" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(0, 0, 0, 1)), url(./images/samsung.jpg)">
               <div class="content">
                 <h3>MOST POPULAR</h3>
                 <h2>Samsung might launch its first quad-camera phone on October 11</h2>
@@ -292,7 +292,7 @@
           <article>
             <h1 class="heading-decoration">Tech <i class="fas fa-greater-than sign-decoration"></i></h1>
 
-            <div class="cover-image bckg-position-t" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(45, 52, 54, 1)), url(./images/code-of-conduct.jpg)">
+            <div class="cover-image bckg-position-t" style="background-image: linear-gradient(rgba(223, 230, 233, -0.8), rgba(0, 0, 0, 1)), url(./images/code-of-conduct.jpg)">
               <div class="content">
                 <h3>MOST POPULAR</h3>
                 <h2>Chaos follows Linux dev community's new code of conduct</h2>
